--- a/ego-commons/pom.xml
+++ b/ego-commons/pom.xml
@@ -11,4 +11,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ego-commons</artifactId>
+    <dependencies>
+        <!-- ftpclient -->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+        </dependency>
+    </dependencies>
 </project>
