添加前台大广告位数据缓存

--- a/ego-parent/pom.xml
+++ b/ego-parent/pom.xml
@@ -14,8 +14,9 @@
     <module>../ego-service-impl</module>
     <module>../ego-commons</module>
     <module>../ego-manage</module>
-      <module>../ego-portal</module>
-      <module>../ego-item</module>
+    <module>../ego-portal</module>
+    <module>../ego-item</module>
+    <module>../ego-redis</module>
   </modules>
 
   <properties>
