--- a/ego-manage/pom.xml
+++ b/ego-manage/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
         <dependency>
             <groupId>com.ego</groupId>
+            <artifactId>ego-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ego</groupId>
             <artifactId>ego-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
