完成SSO单点登录系统

--- a/ego-commons/pom.xml
+++ b/ego-commons/pom.xml
@@ -12,6 +12,11 @@
 
     <artifactId>ego-commons</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <!--<scope>provided</scope>-->
+        </dependency>
         <!-- pojo -->
         <dependency>
             <groupId>com.ego</groupId>
